--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "expo-secure-store": "^15.0.8",
     "expo-splash-screen": "^31.0.8",
     "expo-status-bar": "~3.0.7",
+    "expo-superwall": "^1.0.0",
     "expo-symbols": "^1.0.6",
     "expo-system-ui": "^6.0.7",
     "expo-web-browser": "^15.0.6",
@@ -51,6 +52,7 @@
     "react-native-css-interop": "^0.1.22",
     "react-native-edge-to-edge": "^1.7.0",
     "react-native-gesture-handler": "^2.24.0",
+    "react-native-google-mobile-ads": "^16.0.1",
     "react-native-maps": "^1.20.1",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "^5.4.0",
