--- a/app.json
+++ b/app.json
@@ -1,4 +1,3 @@
-
 {
   "expo": {
     "name": "Say It Anyway: Grief Journal",
@@ -68,5 +67,6 @@
     "extra": {
       "router": {}
     }
-  }
+  },
+  "scheme": "Say It Anyway: Grief Journal"
 }
