refactor: Remove ads, billing, and subscription features

--- a/app.json
+++ b/app.json
@@ -1,3 +1,4 @@
+
 {
   "expo": {
     "name": "Say It Anyway: Grief Journal",
@@ -17,13 +18,7 @@
       "bundleIdentifier": "com.anonymous.Natively",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false,
-        "NSMicrophoneUsageDescription": "This app needs access to your microphone to record audio messages for your loved ones.",
-        "SKAdNetworkItems": [
-          {
-            "SKAdNetworkIdentifier": "cstr6suwn9.skadnetwork"
-          }
-        ],
-        "GADApplicationIdentifier": "ca-app-pub-3940256099942544~1458002511"
+        "NSMicrophoneUsageDescription": "This app needs access to your microphone to record audio messages for your loved ones."
       }
     },
     "android": {
@@ -35,8 +30,7 @@
       "package": "com.anonymous.Natively",
       "permissions": [
         "RECORD_AUDIO"
-      ],
-      "googleServicesFile": "./google-services.json"
+      ]
     },
     "web": {
       "favicon": "./assets/images/final_quest_240x240.png",
@@ -50,13 +44,6 @@
         "expo-audio",
         {
           "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone to record audio messages for your loved ones."
-        }
-      ],
-      [
-        "react-native-google-mobile-ads",
-        {
-          "androidAppId": "ca-app-pub-3940256099942544~3347511713",
-          "iosAppId": "ca-app-pub-3940256099942544~1458002511"
         }
       ]
     ],
