--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
 {
   "expo": {
     "name": "Say It Anyway: Grief Journal",
-    "slug": "Say It Anyway: Grief Journal",
+    "slug": "say-it-anyway-grief-journal",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/db734c9f-ab3a-4e5b-9326-6948ee2ad89f.png",
@@ -15,10 +15,13 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.anonymous.Natively",
+      "bundleIdentifier": "com.chumphrey.sayitanywaygj",
+      "buildNumber": "1",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false,
-        "NSMicrophoneUsageDescription": "This app needs access to your microphone to record audio messages for your loved ones."
+        "NSMicrophoneUsageDescription": "This app needs access to your microphone to record audio messages for your loved ones.",
+        "NSPhotoLibraryUsageDescription": "This app needs access to your photo library to select photos for recipient profiles.",
+        "NSCameraUsageDescription": "This app needs access to your camera to take photos for recipient profiles."
       }
     },
     "android": {
@@ -27,9 +30,12 @@
         "backgroundColor": "#8BA5C8"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.anonymous.Natively",
+      "package": "com.chumphrey.sayitanywaygj",
+      "versionCode": 1,
       "permissions": [
-        "RECORD_AUDIO"
+        "RECORD_AUDIO",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE"
       ]
     },
     "web": {
@@ -45,15 +51,24 @@
         {
           "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone to record audio messages for your loved ones."
         }
+      ],
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "Allow $(PRODUCT_NAME) to access your photo library to select photos for recipient profiles.",
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera to take photos for recipient profiles."
+        }
       ]
     ],
-    "scheme": "natively",
+    "scheme": "sayitanywaygj",
     "experiments": {
       "typedRoutes": true
     },
     "extra": {
-      "router": {}
+      "router": {},
+      "eas": {
+        "projectId": "your-project-id-here"
+      }
     }
-  },
-  "scheme": "Say It Anyway: Grief Journal"
+  }
 }
