refactor: Update project slug in app.json

--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
 {
   "expo": {
     "name": "Say It Anyway: Grief Journal",
-    "slug": "say-it-anyway-grief-journal",
+    "slug": "say-it-anyway-gj",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/db734c9f-ab3a-4e5b-9326-6948ee2ad89f.png",
