feat: Remove profile tab and related files

--- a/app.json
+++ b/app.json
@@ -1,8 +1,7 @@
-
 {
   "expo": {
     "name": "Say It Anyway: Grief Journal",
-    "slug": "say-it-anyway-gj",
+    "slug": "Say It Anyway: Grief Journal",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/db734c9f-ab3a-4e5b-9326-6948ee2ad89f.png",
@@ -70,5 +69,6 @@
         "projectId": "your-project-id-here"
       }
     }
-  }
+  },
+  "scheme": "Say It Anyway: Grief Journal"
 }
